Significant rework of the .vimrc file

--- a/tmux.user.conf
+++ b/tmux.user.conf
@@ -1,2 +1,15 @@
-# set-option -g allow-rename off
-bind C-l send-keys -R; display "Cleared"
+set-option -g allow-rename off
+bind C-l send-keys 'C-l'
+
+# Mouse mode
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
+
+# Scrollback buffer
+set -g history-limit 4096
+
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
