--- a/tmux.user.conf
+++ b/tmux.user.conf
@@ -13,3 +13,6 @@ set -g history-limit 4096
 unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
+
+run-shell "powerline-daemon -q"
+source "/Users/shaond/Library/Python/2.7/lib/python/site-packages/powerline/bindings/tmux/powerline.conf"
