--- a/tmux.conf
+++ b/tmux.conf
@@ -1,20 +1,18 @@
+unbind C-b
+set -g prefix C-a
+bind C-a send-prefix
+bind-key a send-prefix
+
 set-option -g allow-rename off
 bind C-l send-keys 'C-l'
 
 # Mouse mode
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse on
 
 # Scrollback buffer
 set -g history-limit 4096
 
-unbind C-b
-set -g prefix C-a
-bind C-a send-prefix
-
-# color scheme (styled as vim-powerline)
+# Color scheme (styled as vim-powerline)
 set -g status-left-length 52
 set -g status-right-length 451
 set -g status-fg white
@@ -24,7 +22,22 @@ set -g pane-active-border-fg colour39
 set -g message-fg colour16
 set -g message-bg colour221
 set -g message-attr bold
+set -g @hostname_type "short"
 set -g status-left '#[fg=colour235,bg=colour252,bold] ❐ #S #[fg=colour252,bg=colour238,nobold]⮀#[fg=colour245,bg=colour238,bold] #(whoami) #[fg=colour238,bg=colour234,nobold]⮀'
 set -g window-status-format "#[fg=colour235,bg=colour252,bold] #I #W "
 set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=black,bg=colour39,noreverse,bold] #I: #W #[fg=colour39,bg=colour234,nobold]⮀"
 
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'stonevil/tmux-hostname-status'
+set -g @plugin 'soyuka/tmux-current-pane-hostname'
+
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'git@github.com/user/plugin'
+# set -g @plugin 'git@bitbucket.com/user/plugin'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of
+# tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
