Adding vi compatibility and Ctrl-a a bindings in the shell

--- a/tmux.conf
+++ b/tmux.conf
@@ -12,6 +12,11 @@ set -g mouse on
 # Scrollback buffer
 set -g history-limit 4096
 
+# Set vi mode keys
+set-window-option -g mode-keys vi
+bind-key -t vi-copy 'v' begin-selection
+bind-key -t vi-copy 'y' copy-selection
+
 # Color scheme (styled as vim-powerline)
 set -g status-left-length 52
 set -g status-right-length 451
