--- a/tmux.conf
+++ b/tmux.conf
@@ -37,6 +37,7 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'stonevil/tmux-hostname-status'
 set -g @plugin 'soyuka/tmux-current-pane-hostname'
+set -g @plugin 'seebi/tmux-colors-solarized'
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
